# CalCulus-v0.2.0

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  publishto.yml
CalCulus_CPP +1/: calculus_core.cpp
CalCulus_CPP +1/calculus/: __init__.py
calculus/: _core.py
