[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "pybind11>=2.10"
]
build-backend = "setuptools.build_meta"

[project]
name = "calculus-cpp"
version = "0.2.0"
description = "High performance calculus library in C++ with Python bindings"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "LegedsDaD"}
]
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent"
]

